# wis2downloader

./: .gitignore  Dockerfile  MANIFEST.in  README.md  app.py  config.json  config_template.json  oapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: publish-ghcr-and-docker.yml  publish-ghcr.yml  publish-pypi.yml  release.yml  test-code-quality.yml  test-docker.yml  test_docker.yml  trivy.yml  unit-tests.yml  update-ghcr.yml  update_ghcr.yml
docker/: Dockerfile  clean.cron  clean_downloads.py  entrypoint.sh
docker/tests/: docker-compose.yml
docker/tests/containers/broker/: Dockerfile  entrypoint.sh
docker/tests/containers/broker/config/: acl.conf
docker/tests/containers/publisher/: Dockerfile
docker/tests/containers/publisher/config/: config.yml
docker_compose_test/: docker-compose.yml
downloader/: __init__.py
queuer/: __init__.py
subscriber/: __init__.py
tests/: conftest.py  test_client.py
wis2downloader/: __init__.py  app.py  cli.py  config.json  log.py  metrics.py
wis2downloader/downloader/: __init__.py
wis2downloader/queue/: __init__.py
wis2downloader/static/: openapi.yaml
wis2downloader/subscriber/: __init__.py
wis2downloader/templates/: swagger.html
wis2downloader/utils/: config.py  validate_target.py  validate_topic.py
