[build-system]
requires  = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wis2downloader", "tests", "wis2downloader.*", "tests.*"]
exclude = ["docker"]

[project]
name = "wis2downloader"
authors = [
    {name = "Rory Burke"}
]
maintainers = [
    {name = "Rory Burke"},
    {name = "David I. Berry", email = "dberry@wmo.int"}
]
description = "Python package to manage subscriptions and downloads from the WIS2.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["WIS2.0", "MQTT", "subscribe", "download"]
license = {file = "LICENSE"}
dependencies = [
    "click",
    "certifi>=2024.2.2",
    "flask>=3.0.3",
    "flask-cors>=4.0.0",
    "paho-mqtt>=2.0.0 ",
    "prometheus_client>=0.20.0",
    "requests",
    "urllib3>=2.2.1",
    "pywis-topics>=0.3.2",
    "pyyaml"
]
dynamic = ["version"]

[project.scripts]

wis2downloader = "wis2downloader:cli.cli"

[tool.setuptools.dynamic]
version = {attr = "wis2downloader.__version__"}